[package]
name = "db_archive"
version = "0.1.0"
authors = ["Konnov Konstantin <boneyandoom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
postgres = "0.19.1"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["tera_templates", "serve", "json"]

[development]
template_dir = "templates/"
limits = { json = 5242880 }

[production]
template_dir = "templates/"
